[gd_scene load_steps=8 format=3 uid="uid://csfgjflaug8s3"]

[ext_resource type="AudioStream" uid="uid://0rswldab7ydh" path="res://core/misc_assets/sfx/enemyDeathSoundTrim.mp3" id="1_e4xx7"]
[ext_resource type="Script" path="res://core/system/autoloads/sfx.gd" id="1_mivbn"]
[ext_resource type="AudioStream" uid="uid://bu84u2jmyt44x" path="res://core/misc_assets/sfx/checkSoundTrim.mp3" id="3_lkdm5"]
[ext_resource type="AudioStream" uid="uid://bmw6501vnycx0" path="res://core/misc_assets/sfx/coinSoundTrim.mp3" id="4_phojv"]
[ext_resource type="AudioStream" uid="uid://bno35o3repwfl" path="res://core/misc_assets/sfx/winSound.mp3" id="5_6rhof"]
[ext_resource type="AudioStream" uid="uid://bxd6745sqaour" path="res://core/misc_assets/sfx/doorSoundTrim.mp3" id="6_k78t6"]
[ext_resource type="AudioStream" uid="uid://bmocxq1e1y3gi" path="res://core/misc_assets/sfx/keySoundTrim.mp3" id="7_wptrf"]

[node name="SFX" type="Node"]
script = ExtResource("1_mivbn")

[node name="EnemyDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_e4xx7")
bus = &"SFX"

[node name="Checkpoint" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lkdm5")
bus = &"SFX"

[node name="Coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_phojv")
bus = &"SFX"

[node name="Finish" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6rhof")
bus = &"SFX"

[node name="OpenDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_k78t6")
bus = &"SFX"

[node name="CloseDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_k78t6")
volume_db = -10.0
bus = &"SFX"

[node name="Key" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wptrf")
bus = &"SFX"
